--- a/main.html
+++ b/main.html
@@ -4,9 +4,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+ 
     <title>Projeto Integrador 3</title>
+    <style>  
+    </style>
 </head>
 <body>
-    
+    <h1>COMO JOGAR</h1>
+    <p>Para começar aperte no botão.</p>
+    <p1>O jogo consiste em apertar o quadrado no centro o mais rapido que 
+        conseguir, depois que ele se tornar verde.</p1>
+        
+    <button id="but" onclick="startGame()">Aperte aqui para começar</button>
+    <div id="div1" onclick="stopGame()"></div>
+
+    <p2 id="p2"></p2>
+
+    <script src="script.js"></script>
 </body>
 </html>
