css finalizado e mudanças no js e html

--- a/main.html
+++ b/main.html
@@ -11,16 +11,16 @@
     </style>
 </head>
 <body>
-    <h1>COMO JOGAR</h1>
-    <p>Para começar aperte no botão.</p>
-    <p1>O jogo consiste em apertar o quadrado no centro o mais rapido que 
-        conseguir, depois que ele se tornar verde.</p1>
-        
-    <button id="but" onclick="startGame()">Aperte aqui para começar</button>
-    <div id="div1" onclick="stopGame()"></div>
-
-    <p2 id="p2"></p2>
-
+    <section>
+        <h1>COMO JOGAR</h1>
+        <p>Para começar aperte no retangulo abaixo.</p>
+        <p1>O jogo consiste em apertar o quadrado no centro o mais rapido que 
+            conseguir, depois que ele mudar de cor.</p1>
+    </section>     
+    <div id="div1" onclick="alternateCall()">
+        <p2 id="p2">oi</p2>
+    </div>
     <script src="script.js"></script>
 </body>
+
 </html>
