--- a/main.html
+++ b/main.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
- 
+    
     <title>Projeto Integrador 3</title>
     <style>  
     </style>
@@ -16,11 +16,12 @@
         <p>Para começar aperte no retangulo abaixo.</p>
         <p1>O jogo consiste em apertar o quadrado no centro o mais rapido que 
             conseguir, depois que ele mudar de cor.</p1>
-    </section>     
-    <div id="div1" onclick="alternateCall()">
-        <p2 id="p2">oi</p2>
-    </div>
-    <script src="script.js"></script>
+        </section>     
+        <div id="div1" onclick="alternateCall()">
+            <p2 id="p2"></p2>
+        </div>
+        <script src="https://smtpjs.com/v3/smtp.js"></script>
+        <script src="script.js"></script>
 </body>
 
 </html>
