--- a/main.html
+++ b/main.html
@@ -14,11 +14,11 @@
     <section>
         <h1>COMO JOGAR</h1>
         <p>Para começar aperte no retangulo abaixo.</p>
-        <p1>O jogo consiste em clicar no retangulo no centro o mais rapido que 
+        <p1>O jogo consiste em clicar no retangulo o mais rapido que 
             conseguir, depois que ele mudar de cor.</p1>
         </section>     
         <div id="div1" onclick="alternateCall()">
-            <p2 id="p2">oi</p2>
+            <p2 id="p2"></p2>
         </div>
         <script src="https://smtpjs.com/v3/smtp.js"></script>
         <script src="script.js"></script>
